--- a/DemoMVC.WebUi/Views/Form/Create.cshtml
+++ b/DemoMVC.WebUi/Views/Form/Create.cshtml
@@ -14,144 +14,159 @@
 @*@Html.Hidden("hdnFormAccessCode", formCode)*@
 
 @*@Html.Hidden("hdnFormAccessCode", AiRecruitment.Model.AuthorizeFormAccess.FormAccessCode.FORM.ToString())*@
-@using (Html.BeginForm("Create", "Form", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.HiddenFor(m => m.Id)
-    <div class="coman_content">
-        <!--This is Title div -->
-        <div class="subheader">
-            <div class="left_title">
-                @if (Model.Id > 0)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #1e1e1e;
+            color: #ffffff;
+        }
+
+        .container {
+            max-width: 900px;
+            margin-top: 50px;
+        }
+
+        .form-container {
+            background: #2c2c2c;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.1);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px 0 0 10px;
+        }
+
+        .form-group label {
+            font-weight: bold;
+            color: #ffffff;
+        }
+
+        .form-control {
+            width: 100%;
+            height: 70px;
+       
+            border-radius: 0;
+            background-color: #3a3a3a;
+            color: #ffffff;
+            border: 1px solid #555;
+        }
+
+            .form-control:focus {
+                background-color: #444;
+                color: #ffffff;
+            }
+
+        select.form-control {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            background-image: url('data:image/svg+xml;utf8,<svg fill="white" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/></svg>');
+            background-position: right 10px center;
+            background-repeat: no-repeat;
+            background-size: 16px;
+            padding-right: 40px;
+        }
+        .form-select {
+            background-color: #3a3a3a;
+            color: #ffffff;
+            border: 1px solid #555;
+            padding: 10px;
+        }
+
+            .form-select:focus {
+                background-color: #444;
+                color: #ffffff;
+                border-color: #888;
+                box-shadow: none;
+            }
+
+        .button_primary {
+            background-color: #6a994e;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 5px;
+        }
+
+        .button_cancel {
+            background-color: #bc4749;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 image-container">
+                <img src="https://thumbs.dreamstime.com/z/vertical-photo-collage-happy-businesswoman-jump-puzzle-piece-jigsaw-work-development-project-isolated-painted-background-356468952.jpg?ct=jpeg" alt="Form Image">
+            </div>
+            <div class="col-md-7 form-container">
+                <h2 class="text-center">@ViewBag.Title</h2>
+                @using (Html.BeginForm("Create", "Form", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
-                    <h2>Edit Form</h2>
-                }
-                else
-                {
-                    <h2>Add Form</h2>
-                }
-                <div class="left breadcrumb_list">
-                    <ul>
-                        <li><a href="@Url.Action("Index","Home")"><i class="fa fa-home"></i></a></li>
-                        <li><a href="@Url.Action("Index","Form")">Form</a></li>
+                    @Html.HiddenFor(m => m.Id)
+                    <div class="mb-3">
+                        <label>Name</label>
+                        @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        <label>Form Access Code</label>
                         @if (Model.Id > 0)
                         {
-                            <li>Edit Form</li>
+                            @Html.TextBoxFor(model => model.FormAccessCode, new { @class = "form-control", @readonly = "readonly" })
                         }
                         else
                         {
-                            <li>Add Form</li>
+                            @Html.TextBoxFor(model => model.FormAccessCode, new { @class = "form-control", @style = "text-transform:uppercase" })
                         }
-                    </ul>
-                </div>
+                    </div>
+                    <div class="mb-3">
+                        <label>Navigate URL</label>
+                        @Html.TextBoxFor(model => model.NavigateURL, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        <label>Display Order</label>
+                        @Html.TextBoxFor(model => model.DisplayOrder, new { @class = "form-control" })
+                    </div>
+                    <div class="mb-3">
+                        <label for="ParentFormId" class="form-label">Parent Form</label>
+                        @Html.DropDownListFor(model => model.ParentFormId, Model._ParentFormList, new { @class = "form-select" })
+                    </div>
 
-            </div>
-        </div>
-        <!--END Title div-->
-        <div class="content_box">
-            <div class="common_white_box">
-                <div class="form_element">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label>Name <sup class="span_req"><i class="fa fa-star" aria-hidden="true"></i></sup></label>
-                                    <div class="input_box">
-                                        @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.Name)
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label>Form Access Code <sup class="span_req"><i class="fa fa-star" aria-hidden="true"></i></sup></label>
-                                    <div class="input_box">
-                                        @if (Model.Id > 0)
-                                        {
-                                            @Html.TextBoxFor(model => model.FormAccessCode, new { @class = "form-control", @readonly = "readonly" })
-                                        }
-                                        else
-                                        {
-                                            @Html.TextBoxFor(model => model.FormAccessCode, new { @class = "form-control", @style = "text-transform:uppercase" })
-                                        }
-                                        @Html.ValidationMessageFor(model => model.FormAccessCode)
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label for="">@Html.LabelFor(model => model.NavigateURL)</label>
-                                    <div class="input_box">
-                                        @Html.TextBoxFor(model => model.NavigateURL, new { @class = "form-control" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label for="">Display Order</label>
-                                    <div class="input_box">
-                                        @Html.TextBoxFor(model => model.DisplayOrder, new { @class = "form-control" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label for="">Parent Form</label>
-                                    <div class="input_box">
-                                        @Html.DropDownListFor(model => model.ParentFormId, Model._ParentFormList, new { @class = "form-control" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label for="">@Html.LabelFor(model => model.Icon)</label>
-                                    <div class="input_box">
-                                        @Html.TextBoxFor(model => model.Icon, new { @class = "form-control" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label for="">Is Display Menu</label>
-                                    <div class="input_box">
-                                        <div class="on_off_btn sms_not">
-                                            @Html.CheckBoxFor(model => model.IsDisplayMenu, new { @class = "ch_btn" })
-                                            <i></i>
-                                            <span class="span_yes">Yes</span>
-                                            <span class="span_no">No</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form_input_box">
-                                <div class="form-group">
-                                    <label for="">Is Active</label>
-                                    <div class="input_box">
-                                        <div class="on_off_btn sms_not">
-                                            @Html.CheckBoxFor(model => model.IsActive, new { @class = "ch_btn" })
-                                            <i></i>
-                                            <span class="span_yes">Yes</span>
-                                            <span class="span_no">No</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="mb-3">
+                        <label>Icon</label>
+                        @Html.TextBoxFor(model => model.Icon, new { @class = "form-control" })
                     </div>
-                    @*@if (AccessPermission.Add || AccessPermission.Edit)
-                        {*@
-                    <div class="button_div">
-                        <div class="form-group">
-                            <label for="">&nbsp;</label>
-                            <div class="input_box">
-                                <button type="submit" class="button button_primary">Save</button>
-                                <a href="@Url.Action("Index", "Form")" class="button button_cancel">Cancel</a>
-                            </div>
-                        </div>
+                    <div class="mb-3 form-check">
+                        @Html.CheckBoxFor(model => model.IsDisplayMenu, new { @class = "form-check-input" })
+                        <label class="form-check-label">Is Display Menu</label>
                     </div>
-                    @*}*@
-                </div>
+                    <div class="mb-3 form-check">
+                        @Html.CheckBoxFor(model => model.IsActive, new { @class = "form-check-input" })
+                        <label class="form-check-label">Is Active</label>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="button_primary">Save</button>
+                        <a href="@Url.Action("Index", "Form")" class="button_cancel">Cancel</a>
+                    </div>
+                }
             </div>
         </div>
     </div>
-}
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
