--- a/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
+++ b/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <base href="@System.Configuration.ConfigurationManager.AppSettings["BaseUrl"]">
     <meta charset="utf-8" />
@@ -40,43 +40,237 @@
     <script src="~/Content/js/moment.js"></script>
     @Scripts.Render("~/bundles/kendo")
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("DemoMVC", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("User", "Index", "UserProfile", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Role", "Index", "Roles", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Form", "Index", "Form", new { area = "" }, new { @class = "nav-link" })</li>
+<body class="left_menu_horizontal">
+    <style id="gridPageLoader">
+        .page-loader {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-position: center;
+        }
 
+        .common_white_box.listingpage {
+            position: relative;
+        }
+
+        .k-grid {
+            opacity: 0;
+        }
+    </style>
+    <header class="header">
+        <div class="container container-fluid no_space">
+            <div class="header_row">
+                <div class="brand">
+                    <div class="brand_row">
+                        <a href="@Url.Action("Index","Home")">
+                            <p>DEMO MVC</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="header_right_col clearfix">
                     @{
-                        if (User.Identity.IsAuthenticated)
+                        if (Session["Menu"] != null)
                         {
-                            <li>
-                                @using (Html.BeginForm("Logoff", "Account", FormMethod.Post))
-                                {
-                                    <button type="submit" class="btn btn-danger">Log Off</button>
-                                }
-                            </li>
-                        }
-                    }
-                </ul>
-            </div>
+                            List<DemoMVC.Models.MenuVW> _menu = (List<DemoMVC.Models.MenuVW>)Session["Menu"];
+                            <div class="head_menu_list">
+                                <ul>
+                                    @foreach (var _main in _menu)
+                                    {
+                                        <li class="head_menu_dropdown" id="@_main.FormAccessCode" data-facode="@_main.FormAccessCode">
+                                            <a href="@Url.Content(_main.NavigateURL)">
+                                                <span class="menu_text">@_main.Name</span>
+                                            </a>
+                                            @if (_main.SubMenu != null)
+                                            {
 
+
+                                                <div class="dropdown-menu head_menu_dropdown_content">
+                                                    <ul>
+                                                        @foreach (var _sub in _main.SubMenu)
+                                                        {
+                                                            <li class="head_menu_dropdown" data-facode="@_sub.FormAccessCode">
+                                                                <a href="@Url.Content(_sub.NavigateURL)">
+                                                                    <span class="menu_text">@_sub.Name</span>
+                                                                </a>
+                                                            </li>
+                                                        }
+                                                    </ul>
+                                                </div>
+                                            }
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                        }
+                        else
+                        {
+                            Response.Redirect("~/Account/Login");
+                        }
+
+                    }
+                    <div class="head_right_col">
+                        <div class="toprightbar">
+                            @Html.Partial("_LoginPartial")
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-       
-        
+    </header>
+    <div id="body">
+        @RenderSection("featured", required: false)
+        <div class="main_body_content">
+            <div class="main_wrapper">
+                <div class="container container-fluid no_space">
+                    @RenderBody()
+                </div>
+            </div>
+        </div>
+        @*<div style="display: none;">
+                <input type="hidden" id="hdnPersistentGridState" value="@AiRecruitment.Service.CommonLookupHelper.EnablePersistentGridState().ToString()" />
+            </div>*@
     </div>
+    <footer>
+        <div class="content-wrapper">
+            <div class="float-left">
+            </div>
+        </div>
+    </footer>
     @RenderSection("scripts", required: false)
     <script src="@Url.Content("~/Content/js/script.js")"></script>
-   
+    <script>
+        $(".listingpage").closest('body').addClass('full-width-grid');
+        $(document).ready(function () {
+            fnSetActiveMenu();
+
+            $('.lnkClearFilters').on('click', fnClearFiltersClickEvent);
+            $("#menu").kendoMenu();
+            $('.menu_icon').on('click', function () {
+                $(this).next('.menuBackground').toggleClass('active');
+                $(this).toggleClass('active');
+                $('.menuBackground').slideToggle();
+            });
+        });
+
+        function fnSaveGridState() {
+            var persistentGridState = $('#hdnPersistentGridState').val().toLowerCase() != 'false';
+            if (persistentGridState) {
+                setTimeout(function () {
+                    var gridAccessCode = $('#hdnGridAccessCode').val();
+                    var gridId = $('#hdnKendoGridId').val();
+                    var grid = $('#' + gridId).data('kendoGrid');
+                    var gridSettings = kendo.stringify(grid.getOptions());
+                    var postData = {
+                        "GridAccessCode": gridAccessCode,
+                        "GridSettings": gridSettings
+                    };
+
+                    fnCallAjaxHttpPostEvent('@Url.Action("SaveState", "GridState")', postData, true, false, function (data) {
+                    });
+                }, 5);
+            }
+        }
+
+        function fnSetupKendoGrid() {
+            var gridAccessCode = $('#hdnGridAccessCode').val();
+            var gridId = $('#hdnKendoGridId').val();
+            var grid = $('#' + gridId).data('kendoGrid');
+            var postData = {
+                "GridAccessCode": gridAccessCode
+            };
+            var persistentGridState = $('#hdnPersistentGridState').val().toLowerCase() != 'false';
+            if (persistentGridState) {
+                fnCallAjaxHttpPostEvent('@Url.Action("GetState", "GridState")', postData, true, false, fnGetGridStateSuccessEvent, grid);
+            }
+            else {
+                grid.dataSource.read();
+            }
+        }
+
+        function fnClearFiltersClickEvent(evt) {
+            var gridId = $('#hdnKendoGridId').val();
+            var grid = $('#' + gridId).data('kendoGrid');
+            var postData = {
+                "GridAccessCode": $('#hdnGridAccessCode').val()
+            };
+            fnCallAjaxHttpPostEvent('@Url.Action("ClearState", "GridState")', postData, true, true, function (data) {
+                setTimeout(function () {
+                    fnShowWaitImage();
+                    window.location.reload(true);
+                });
+            });
+        }
+
+    </script>
+    <script>
+            function fnSaveGridStateWithGridAccessCode(gridId, gridAccessCode) {
+                var persistentGridState = $('#hdnPersistentGridState').val().toLowerCase() != 'false';
+                if (persistentGridState) {
+                    setTimeout(function () {
+                        var grid = $('#' + gridId).data('kendoGrid');
+                        var gridSettings = kendo.stringify(grid.getOptions());
+                        var postData = {
+                            "GridAccessCode": gridAccessCode,
+                            "GridSettings": gridSettings
+                        };
+
+                        fnCallAjaxHttpPostEvent('@Url.Action("SaveState", "GridState")', postData, true, false, function (data) {
+
+                        });
+                    }, 5);
+                }
+            }
+
+            function fnSetupKendoGridWithGridAccessCode(gridId, gridAccessCode) {
+                var grid = $('#' + gridId).data('kendoGrid');
+                var postData = {
+                    "GridAccessCode": gridAccessCode
+                };
+                var persistentGridState = $('#hdnPersistentGridState').val().toLowerCase() != 'false';
+                if (persistentGridState) {
+                    fnCallAjaxHttpPostEvent('@Url.Action("GetState", "GridState")', postData, true, false, fnGetGridStateSuccessEvent, grid);
+                }
+                else {
+                    grid.dataSource.read();
+                }
+            }
+
+            function fnClearFiltersClickEventWithGridAccessCode(gridId, gridAccessCode) {
+                var grid = $('#' + gridId).data('kendoGrid');
+                var postData = {
+                    "GridAccessCode": gridAccessCode
+                };
+                fnCallAjaxHttpPostEvent('@Url.Action("ClearState", "GridState")', postData, true, true, function (data) {
+                    setTimeout(function () {
+                        fnShowWaitImage();
+                        window.location.reload(true);
+                    });
+                });
+        }
+        function fnOnSuccessMessage(messageText) {
+
+            $.toast({
+                heading: 'Success',
+                text: messageText,
+                showHideTransition: 'Top',
+                position: 'bottom-right',
+                //position: { left: 'auto', right: 20, top: 100, bottom: 'auto' },
+                icon: 'success',
+            })
+        }
+
+        function fnOnErrorMessage(messageText) {
+            $.toast({
+                heading: 'Error',
+                text: messageText,
+                showHideTransition: 'Top',
+                position: 'bottom-right',
+                icon: 'error'
+            })
+        }
+
+    </script>
 </body>
 </html>
