Clean Code And Add Pop UP

--- a/DemoMVC.WebUi/Views/Form/Create.cshtml
+++ b/DemoMVC.WebUi/Views/Form/Create.cshtml
@@ -1,7 +1,8 @@
-﻿@model DemoMVC.Models.FormModel
+﻿@model DemoMVC.WebUi.Models.FormModel
+@using DemoMVC.Models
 @*@using AiRecruitment.Model;*@
 @{
-    //string formCode = AuthorizeFormAccess.FormAccessCode.FORMMASTER.ToString();
+    string formCode = AuthorizeFormAccess.FormAccessCode.FORMMASTER.ToString();
     if (Model.Id > 0)
     {
         ViewBag.Title = "Edit Form";
