--- a/DemoMVC.WebUi/Views/Account/Login.cshtml
+++ b/DemoMVC.WebUi/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DemoMVC.Models.LoginModel
-    @{ 
-    Layout= null;
-    }
+@{
+    Layout = null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,9 +12,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/images/Web_Logo.png" rel="shortcut icon" type="image/x-icon" />
     <style>
         body {
-            background: url('https://img.freepik.com/free-vector/futuristic-technological-wallpaper_79603-1093.jpg?t=st=1739270804~exp=1739274404~hmac=4e84cdac9337889e02ecbadd99d72d177ff3a18fdca5e40dd9668260bb793768&w=996') no-repeat center center fixed;
+            background: url('/content/images/BackImage.png') no-repeat center center fixed;
             background-size: cover;
             min-height: 100vh;
             display: flex;
@@ -23,18 +24,48 @@
         }
 
         .card {
-            background-color: rgba(255, 255, 255, 0.85);
+            background-color: whitesmoke;
             border-radius: 1.5rem;
             padding: 2rem;
-            opacity: 0.8;
+            opacity: 0.95;
             max-width: 400px;
             width: 100%;
+            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Logo & Title Section */
+        .brand {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            padding-bottom: 15px;
+            border-bottom: 2px solid #ddd;
+        }
+
+            .brand img {
+                height: 70px;
+            }
+
+        .gradient-title {
+            font-size: 40px;
+            font-weight: bold;
+            padding-bottom: 10px;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #ff8c00, #ff0080);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin: 0;
         }
     </style>
 </head>
 <body>
-    <div class="card shadow">
-        <h3 class="text-center mb-4">User Login</h3>
+    <div class="card">
+        <div class="brand">
+            <img src="~/content/images/Web_Logo.png" alt="OEMS" />
+            <p class="gradient-title">OEMS</p>
+        </div>
+
         @using (Html.BeginForm(new { returnUrl = ViewBag.ReturnUrl }))
         {
             @Html.AntiForgeryToken()
