--- a/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
+++ b/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
@@ -3,8 +3,8 @@
 <head>
     <base href="@System.Configuration.ConfigurationManager.AppSettings["BaseUrl"]">
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - DemoMVC</title>
-    <link href="~/Content/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>@ViewBag.Title - OEMS</title>
+    <link href="~/Content/images/Web_Logo.png" rel="shortcut icon" type="image/x-icon" />
     @Scripts.Render("~/Scripts/polyfill.min.js")
     <script src="@Url.Content("~/Content/inc/jquery/jquery-2.1.0.min.js")"></script>
     @Scripts.Render("~/bundles/jqueryval")
@@ -39,20 +39,107 @@
     <script src="~/Content/js/toast.js"></script>
     <script src="~/Content/js/moment.js"></script>
     @Scripts.Render("~/bundles/kendo")
-    <style>
+<style>
         .gradient-title {
             margin-top:15px;
-            font-size:30px;
+            font-size:40px;
             font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             background: linear-gradient(to right, #ff8c00, #ff0080);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-       .header_row{
-           background-color:black;
-       }
-   
-    </style>
+
+        .header_row {
+            background-color: black;
+        }
+
+        .brand_row {
+            display: flex !important;
+            align-items: center !important;
+            gap: 10px !important;
+        }
+
+        .brand_row img {
+            height: 50px !important;
+        }
+
+        .gradient-title {
+            color: white !important;
+            margin: 0 !important;
+            font-size: 20px;
+            font-weight: bold;
+            padding-right: 20px;
+        }
+
+        /* Custom Menu Styles */
+    /* General styling for the menu */
+    .head_menu_list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+    }
+
+    .head_menu_dropdown {
+        position: relative;
+        margin-right: 0px; /* Add space between items */
+    }
+
+        .head_menu_dropdown a {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            text-decoration: none;
+            color: white; /* Menu text color */
+        }
+
+            .head_menu_dropdown a:hover {
+                background-color: transparent; /* Remove background on hover */
+                color: #ff8c00; /* Add color change on hover */
+            }
+
+        .head_menu_dropdown i {
+            margin-right: 8px; /* Space between icon and text */
+            font-size: 18px; /* Icon size */
+        }
+
+        /* Dropdown styles with white background */
+        .head_menu_dropdown .dropdown-menu {
+            display: none;
+            position: absolute;
+            left: 0;
+            top: 100%;
+            background-color: white; /* Set white background for the dropdown */
+            border: 1px solid #ccc; /* Optional: add border to make it stand out */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: add shadow for better visibility */
+            padding: 0;
+            margin: 0;
+            z-index: 10; /* Ensure dropdown appears above other content */
+        }
+
+        .head_menu_dropdown:hover .dropdown-menu {
+            display: block;
+            border-radius: 4px; /* Optional: Add border radius to dropdown */
+        }
+
+        .head_menu_dropdown .dropdown-menu li a {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            color: black;
+        }
+
+            .head_menu_dropdown .dropdown-menu li a:hover {
+                background-color: #f7f7f7; /* Light background on hover */
+                color: #ff8c00; /* Change color on hover */
+            }
+
+        .head_menu_dropdown .dropdown-menu i {
+            margin-right: 8px; /* Space between icon and text */
+            font-size: 16px; /* Icon size */
+        }
+
+</style>
 </head>
 <body class="left_menu_horizontal">
     <style id="gridPageLoader">
@@ -73,53 +160,53 @@
             opacity: 0;
         }
     </style>
-        
+
     <nav>
         <div>
             <div class="header_row">
-                <div class="brand" style="background-color:black ; padding-left:50px;">
-                    <p class="gradient-title">DEMO MVC</p>
+                <div class="brand" style="background-color:black; padding-left:50px;">
+                    <div class="brand_row">
+                        <img src="~/content/images/Web_Logo.png" alt="OEMS" />
+                        <p class="gradient-title" style="font-size:30px">OEMS</p>
+                    </div>
                 </div>
-                <div class="header_right_col clearfix" >
-                    @{
-                        if (Session["Menu"] != null)
-                        {
-                            List<DemoMVC.Models.MenuVW> _menu = (List<DemoMVC.Models.MenuVW>)Session["Menu"];
-                            <div class="head_menu_list" style="color:white">
-                                <ul>
-                                    @foreach (var _main in _menu)
-                                    {
-                                        <li class="head_menu_dropdown" id="@_main.FormAccessCode" data-facode="@_main.FormAccessCode">
-                                            <a href="@Url.Content(_main.NavigateURL)" style="color:white">
-                                                <span class="menu_text">@_main.Name</span>
-                                            </a>
-                                            @if (_main.SubMenu != null)
-                                            {
-
-
-                                                <div class="dropdown-menu head_menu_dropdown_content" >
-                                                    <ul>
-                                                        @foreach (var _sub in _main.SubMenu)
-                                                        {
-                                                            <li class="head_menu_dropdown" data-facode="@_sub.FormAccessCode">
-                                                                <a href="@Url.Content(_sub.NavigateURL)" style="color:black">
-                                                                    <span class="menu_text ">@_sub.Name</span>
-                                                                </a>
-                                                            </li>
-                                                        }
-                                                    </ul>
-                                                </div>
-                                            }
-                                        </li>
-                                    }
-                                </ul>
-                            </div>
-                        }
-                        else
-                        {
-                            Response.Redirect("~/Account/Login");
-                        }
-
+                <div class="header_right_col clearfix">
+                    @if (Session["Menu"] != null)
+                    {
+                        List<DemoMVC.Models.MenuVW> _menu = (List<DemoMVC.Models.MenuVW>)Session["Menu"];
+                        <div class="head_menu_list">
+                            <ul>
+                                @foreach (var _main in _menu)
+                                {
+                                    <li class="head_menu_dropdown" id="@_main.FormAccessCode" data-facode="@_main.FormAccessCode">
+                                        <a href="@Url.Content(_main.NavigateURL)" style="color:white">
+                                            <!--<i class="fa fa-home"></i>--> <!-- Replace with appropriate icon -->
+                                            <span class="menu_text">@_main.Name</span>
+                                        </a>
+                                        @if (_main.SubMenu != null)
+                                        {
+                                            <div class="dropdown-menu head_menu_dropdown_content">
+                                                <ul>
+                                                    @foreach (var _sub in _main.SubMenu)
+                                                    {
+                                                        <li class="head_menu_dropdown" data-facode="@_sub.FormAccessCode">
+                                                            <a href="@Url.Content(_sub.NavigateURL)">
+                                                                <i class="fa fa-arrow-circle-o-right"></i> <!-- Replace with appropriate icon -->
+                                                                <span class="menu_text">@_sub.Name</span>
+                                                            </a>
+                                                        </li>
+                                                    }
+                                                </ul>
+                                            </div>
+                                        }
+                                    </li>
+                                }
+                            </ul>
+                        </div>
+                    }
+                    else
+                    {
+                        Response.Redirect("~/Account/Login");
                     }
                     <div class="head_right_col" style="padding-right:150px">
                         <div class="toprightbar">
@@ -129,20 +216,17 @@
                 </div>
             </div>
         </div>
-
     </nav>
-    <div">
+    <!-- Content and footer -->
+    <div>
         @RenderSection("featured", required: false)
-        <div class="">
-            <div class="">
+        <div>
+            <div>
                 <div class="container">
                     @RenderBody()
                 </div>
             </div>
         </div>
-        @*<div style="display: none;">
-                <input type="hidden" id="hdnPersistentGridState" value="@AiRecruitment.Service.CommonLookupHelper.EnablePersistentGridState().ToString()" />
-            </div>*@
     </div>
     <footer>
         <div class="content-wrapper">
