Create View Changed

--- a/DemoMVC.WebUi/Views/Subject/Create.cshtml
+++ b/DemoMVC.WebUi/Views/Subject/Create.cshtml
@@ -44,7 +44,7 @@
             .form-container h2 {
                 text-align: center;
                 margin-bottom: 20px;
-                color: #17a2b8; /* Teal Color */
+                color: #ff0080; /* Teal Color */
             }
 
         .form-label {
@@ -52,7 +52,7 @@
         }
 
         .input-group-text {
-            background-color: #17a2b8;
+            background-color: #ff0080;
             color: white;
             border: none;
         }
@@ -63,7 +63,7 @@
         }
 
         .btn-custom {
-            background: #17a2b8;
+            background: #ff0080;
             color: white;
             border-radius: 5px;
             padding: 10px;
@@ -199,7 +199,7 @@
 
                 <!-- Submit & Back Buttons -->
                 <div class="d-flex flex-column gap-2">
-                    <button type="submit" class="btn btn-custom"><i class="fa fa-save"></i> Save Subject</button>
+                    <button type="submit" class="btn btn-custom"><i class="fa fa-save"></i> Save</button>
                     <a href="@Url.Action("Index")" class="btn btn-secondary"><i class="fa fa-arrow-left"></i> Back</a>
                 </div>
             }
