--- a/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
+++ b/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
@@ -220,9 +220,9 @@
     <!-- Content and footer -->
     <div>
         @RenderSection("featured", required: false)
-        <div>
-            <div>
-                <div class="container">
+        <div class="main_body_content">
+            <div class="main_wrapper">
+                <div class="container container-fluid no_space w-100">
                     @RenderBody()
                 </div>
             </div>
